# BLE-mesh-networking

./: .gitignore  README.md
Documentation/: MESH_DASHBOARD_PLAN.md
Documentation/Justin-meeting-notes/: Justin-Feb-11.md  Justin-Feb-12.md  Justin-Feb-15.md  Justin-Feb-17.md  Justin-Feb-25.md
Documentation/Project-Knowledge-Obsidian-Vault/: 01-Learning-Path.md  Beginner-Track.md  Glossary.md  How-To-Actually-Learn-This-Repo.md  Welcome.md
Documentation/v0.3.0-core-mesh-docs/: NETKEY_FIX.md
Documentation/v0.6.1-relay-node/: RELAY_NODE_CHANGELOG.md
Documentation/v0.6.2-classes-cleanup/: CHANGELOG.md  CLASSES_CLEANUP_IMPLEMENTATION.md  CLASSES_CLEANUP_PLAN.md
Documentation/v0.7.0-gateway-failover/: AGENT_PROMPT.md  GATEWAY_FAILOVER_IMPLEMENTATION.md  GATEWAY_FAILOVER_PLAN.md
ESP/ESP-Mesh-Node-sensor-test/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c6
ESP/ESP-Provisioner/main/: CMakeLists.txt  composition.c  composition.h  main.c  mesh_config.c  mesh_config.h  model_binding.c  model_binding.h  node_registry.c  node_registry.h  provisioning.c  provisioning.h
Justin-meeting-notes/: Justin-Feb-15.md
Project-Knowledge-Obsidian-Vault/: 00-Start-Here.md
gateway-pi5/: requirements.txt
v0.3.0-core-mesh-docs/: BLE_MESH_PROGRESS_REPORT.md
v0.5.0 Power Manager Gateway Refinement/: MESH_IMPLEMENTATION.md
v0.6.0-group-addressing/: GROUP_ADDRESSING_IMPLEMENTATION.md
v0.6.01-robustness(WIP)/: CIRCUIT_TOOLS_AND_VALIDATION.md  Circuit-Diagram.drawio  ROBUSTNESS_PLAN.md
v0.6.2-web-ui (WIP)/: MESH_DASHBOARD_PLAN.md
(+194 files in other folders)
