idf_component_register(SRCS "main.c"
                            "mesh_config.c"
                            "node_registry.c"
                            "composition.c"
                            "model_binding.c"
                            "provisioning.c"
                    INCLUDE_DIRS ".")
